--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -10,4 +10,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="canopy" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
