--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="canopy" Version="2.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
 </Project>
