--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -9,14 +9,17 @@
     <Compile Include="TestTypes.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="CanopyExtensions.fs" />
+    <Compile Include="Pages.fs" />
     <Compile Include="CompositeControls/Header.fs" />
     <Compile Include="CompositeControls/Signup.fs" />
     <Compile Include="CompositeControls/Login.fs" />
     <Compile Include="CompositeControls/PostToFeed.fs" />
-    <Compile Include="Pages.fs" />
+    <Compile Include="CompositeControls/CreateNewProfilePerson.fs" />    
+    <Compile Include="CompositeControls/ProfileToolbar.fs" />    
     <Compile Include="Tests/SignupTests.fs" />
     <Compile Include="Tests/PostToFeedTests.fs" />
     <Compile Include="Tests/LoginTests.fs" />
+    <Compile Include="Tests/CreateNewProfilePersonTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
