fix for docker-compose to pass through environment variable to container
$adminexamplepassword is passed.
Must be defined on a machine running those tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     volumes:
       - './TestResults:/tests/TestResults'      
     networks:
-      - selenium-test      
+      - selenium-test 
+    environment:
+      - adminexamplepassword     
 
   testbrowser:
     image: selenium/standalone-chrome 
