--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>    
+    <Compile Include="TestHelpers.fs" />
     <Compile Include="TestTypes.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="Audit.fs" />
@@ -25,8 +26,8 @@
     <Compile Include="Tests/CreateNewProfilePersonTests.fs" />
     <Compile Include="Tests/ProfileToolbarTests.fs" />
     <Compile Include="CompositeControls/Login2.fs" />
-    <Compile Include="Tests/LoginTests2.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="Tests/LoginTests2.fs" /> 
+    <Compile Include="Program.fs" />    
   </ItemGroup>
   <ItemGroup>
     <Reference Include="VCanopy">
