--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -12,20 +12,20 @@
     <Compile Include="Audit.fs" />
     <Compile Include="CanopyExtensions.fs" />
     <Compile Include="Pages.fs" />
-    <Compile Include="CompositeControls/Header.fs" />
-    <Compile Include="CompositeControls/Signup.fs" />
-    <Compile Include="CompositeControls/Login.fs" />
-    <Compile Include="CompositeControls/PostToFeed.fs" />
-    <Compile Include="CompositeControls/CreateNewProfilePerson.fs" />    
-    <Compile Include="CompositeControls/AccountPopup.fs" />    
-    <Compile Include="CompositeControls/ProfileToolbar.fs" />    
+    <Compile Include="Components/Header.fs" />
+    <Compile Include="Components/Signup.fs" />
+    <Compile Include="Components/Login.fs" />
+    <Compile Include="Components/PostToFeed.fs" />
+    <Compile Include="Components/CreateNewProfilePerson.fs" />    
+    <Compile Include="Components/AccountPopup.fs" />    
+    <Compile Include="Components/ProfileToolbar.fs" />    
     <Compile Include="Tests/TestsSetup.fs" />
     <Compile Include="Tests/SignupTests.fs" />
     <Compile Include="Tests/PostToFeedTests.fs" />
     <Compile Include="Tests/LoginTests.fs" />
     <Compile Include="Tests/CreateNewProfilePersonTests.fs" />
     <Compile Include="Tests/ProfileToolbarTests.fs" />
-    <Compile Include="CompositeControls/Login2.fs" />
+    <Compile Include="Components/Login2.fs" />
     <Compile Include="Tests/LoginTests2.fs" /> 
     <Compile Include="Program.fs" />    
   </ItemGroup>
