--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -23,13 +23,21 @@
     <Compile Include="Tests/LoginTests.fs" />
     <Compile Include="Tests/CreateNewProfilePersonTests.fs" />
     <Compile Include="Tests/ProfileToolbarTests.fs" />
+    <Compile Include="CompositeControls/Login2.fs" />
+    <Compile Include="Tests/LoginTests2.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Reference Include="VCanopy">
+        <HintPath>Dependencies\VCanopy.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="canopy" Version="2.1.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="nunit" Version="3.11.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
-
 </Project>
 
