--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>    
+    <Compile Include="AssemblyInfo.fs" />
     <Compile Include="TestHelpers.fs" />
     <Compile Include="TestTypes.fs" />
     <Compile Include="Common.fs" />
