--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
   test:
     build: .
     depends_on:
-      - testbrowser
+      - hub
+      - chrome
     volumes:
       - './TestResults:/tests/TestResults'      
     networks:
@@ -13,10 +14,28 @@ services:
     environment:
       - adminexamplepassword     
 
-  testbrowser:
-    image: selenium/standalone-chrome 
+  chrome:
+    image: selenium/node-chrome 
+    volumes:
+      - /dev/shm:/dev/shm    
     networks:
-      - selenium-test      
+      - selenium-test    
+    depends_on:
+      - hub
+    environment:
+      HUB_HOST: hub
+      NODE_MAX_INSTANCES: 4
+      NODE_MAX_SESSION: 4  
+
+
+  hub:
+    image: selenium/hub
+    ports:
+      - "4444:4444"
+    networks:
+      - selenium-test          
+    environment:
+      - GRID_CLEAN_UP_CYCLE=500  
 
 networks:
   selenium-test:      
