added tests to edit organization profile

--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -29,6 +29,7 @@
     <Compile Include="Tests/CreateNewProfilePersonTests.fs" />                      
     <Compile Include="Tests/CreateNewProfileOrganizationTests.fs" />
     <Compile Include="Tests/ProfileToolbarTests.fs" />
+    <Compile Include="Tests/EditOrganizationProfileTests.fs" />
     <Compile Include="Program.fs" />    
   </ItemGroup>
   <ItemGroup>
