commited changes as is
4m diff

--- a/una-ui-tests.fsproj
+++ b/una-ui-tests.fsproj
@@ -41,5 +41,6 @@
     <Reference Include="VCanopy">
       <HintPath>Dependencies\VCanopy.dll</HintPath>
     </Reference>
+    <Reference Include="netstandard" />
   </ItemGroup>
 </Project>
